kustomize/instances/overlays/frontend/hipstershop/productcatalog-canary/patches/vs-patch.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hipstershop-vs
spec:
  gateways:
  - hipstershop-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productcatalogservice
        port:
          number: 80
        subset: v1
      weight: 50
    - destination:
        host: productcatalogservice
        port:
          number: 80
        subset: v2
      weight: 50
